# vitalis

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_ja.md  cursor-rules-presentation.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
docker/: Dockerfile.ci  Dockerfile.core  Dockerfile.playwright  Dockerfile.tauri
docs/: SnapGene 開発ステップ.md
src/application/dtos/: sequence_dto.py
src/application/services/: sequence_service.py
src/config/: settings.py
src/domain/models/: fasta.py  genbank.py
src/domain/repositories/: sequence_repository.py
src/infrastructure/parsers/: fasta_parser.py  genbank_constants.py  genbank_parser.py  genbank_section_parsers.py
src/infrastructure/repositories/: file_sequence_repository.py
src/infrastructure/utils/: file_utils.py
src/interfaces/api/: dependencies.py  main.py
src/interfaces/api/routes/: sequence_routes.py
tests/: conftest.py  test_genbank_parser.py
tests/data/: abca4_sequence.fasta  abca4_sequence.gb
vitalis-app/: .gitignore  README.test.md  index.html  multiline.fasta  package-lock.json  package.json  playwright.config.ts  test-empty.fasta  vite.config.ts
vitalis-app/src/: App.tsx
vitalis-app/src-tauri/: Cargo.toml  tauri.conf.json
vitalis-app/src-tauri/src/: main.rs
vitalis-app/src/components/: CircularGenomeVisualization.tsx  GenBankMetadataViewer.tsx  Layout.tsx  PrimerDesign.tsx  Sidebar.tsx  SnapGeneStyleVisualization.tsx
vitalis-app/src/features/sequence-analysis/components/: AnalysisPanel.tsx  (+1 more)
vitalis-app/src/hooks/: useSequenceSelection.ts
vitalis-app/src/types/: genbank.ts  sequence.ts
vitalis-app/tests/: basic-ui.spec.ts  error-handling.spec.ts  sequence-analysis.spec.ts  sequence-workflow.spec.ts  statistics-analysis.spec.ts  ui-state-management.spec.ts
vitalis-core/: Cargo.toml
vitalis-core/benches/: parser_bench.rs
vitalis-core/src/: commands.rs  lib.rs  stats.rs  storage.rs
vitalis-core/src/application/: mod.rs
vitalis-core/src/domain/: mod.rs  primer.rs  thermodynamic_calculator.rs  thermodynamics.rs
vitalis-core/src/infrastructure/: genbank_parser.rs  mod.rs  parsers.rs  storage.rs
vitalis-core/src/io/: fasta.rs  fastq.rs  mod.rs
vitalis-core/src/services/: mod.rs  primer_design.rs  stats.rs
vitalis-core/tests/: fasta_parser_test.rs  fastq_parser_test.rs  genbank_integration_test.rs  get_window_test.rs
vitalis-core/tests/data/: edge_cases.fasta  multiline.fasta  sample_ecoli.gb  sample_plasmid.gb  simple.fasta  simple.fastq
(+12 files in other folders)
