[tool.poetry]
name = "vitalis-api"
version = "0.1.0"
description = "遺伝子配列データの解析と可視化のためのAPI"
authors = ["akrmnd"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
biopython = "^1.83"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = "^2.4.2"
aiofiles = "^24.1.0"
pydantic-settings = "^2.8.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.9"
mypy = "^1.6.1"
types-aiofiles = "^24.1.0.20241221"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Ruff の設定
line-length = 119
target-version = "py312"
select = ["E", "F", "I", "N", "B", "A", "C4", "SIM", "ERA"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["vitalis"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]