[package]
name = "vitalis-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
lazy_static = "1.4"

# Bio formats
noodles = { version = "0.86", features = ["fasta", "fastq"] }
noodles-fasta = "0.42"
noodles-fastq = "0.17"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false