[package]
name = "vitalis-studio"
version = "0.1.0"
description = "DNA/RNA Sequence Analysis Tool"
authors = ["Akira Manda"]
license = "MIT"
repository = "https://github.com/akrmnd/vitalis"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
vitalis-core = { path = "../../vitalis-core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
